--- a/templates/index.html
+++ b/templates/index.html
@@ -124,37 +124,37 @@
 
     <div class="dashboard">
         <div class="card temperature">
-            <h2>Temperature (°C)</h2>
+            <h2>Temperature</h2>
             <div class="icon"><i class="bi bi-thermometer-half"></i></div>
             <div class="value" id="temperature">Loading...</div>
         </div>
         <div class="card humidity">
-            <h2>Humidity (%)</h2>
+            <h2>Humidity</h2>
             <div class="icon"><i class="bi bi-droplet-half"></i></div>
             <div class="value" id="humidity">Loading...</div>
         </div>
         <div class="card pressure">
-            <h2>Atmospheric Pressure (Pa)</h2>
+            <h2>Atmospheric Pressure</h2>
             <div class="icon"><i class="bi bi-speedometer2"></i></div> <!-- Icono de barómetro -->
             <div class="value" id="pressure">Loading...</div>
         </div>
         <div class="card altitude">
-            <h2>Altitude (m)</h2>
+            <h2>Altitude</h2>
             <div class="icon"><i class="bi bi-graph-up"></i></div>
             <div class="value" id="altitude">Loading...</div>
         </div>
         <div class="card wind-direction">
-            <h2>Wind Direction (°)</h2>
+            <h2>Wind Direction</h2>
             <div class="icon"><i class="bi bi-compass"></i></div>
             <div class="value" id="wind_direction">Loading...</div>
         </div>
         <div class="card wind-speed">
-            <h2>Wind Speed (kph)</h2>
+            <h2>Wind Speed</h2>
             <div class="icon"><i class="bi bi-wind"></i></div>
             <div class="value" id="wind_speed">Loading...</div>
         </div>
         <div class="card precipitation">
-            <h2>Precipitation (mm)</h2>
+            <h2>Precipitation</h2>
             <div class="icon"><i class="bi bi-cloud-rain"></i></div>
             <div class="value" id="precipitation">Loading...</div>
         </div>
