Aumentar titulo de cards

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,6 @@
         height: 100%;
         background: url('/static/weather-themed-background.jpg') no-repeat center center fixed;
         background-size: cover;
-        /* filter: blur(5px); */
         z-index: -1;
     }
 
@@ -56,7 +55,8 @@
     }
 
     .card h2 {
-        font-size: 1.2em;
+        font-size: 1.5em; /* Más grande */
+        font-weight: bold; /* En negrita */
         margin-bottom: 10px;
         color: #00796b;
     }
